--- a/junior/fylo_landing_page/styles.css
+++ b/junior/fylo_landing_page/styles.css
@@ -16,3 +16,79 @@
   padding: 0;
   box-sizing: bordre-box;
 }
+
+body {
+  width: 90%;
+  margin: 0 auto;
+}
+
+main {
+  width: 100%;
+  height: 100%;
+}
+
+img {
+  width: 100%;
+  height: auto;
+}
+
+.head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 30px 0;
+  width: 100%;
+}
+
+.head object {
+  width: 175px;
+  height: auto;
+}
+
+.head li {
+  list-style: none;
+  display: inline-block;
+}
+
+.head a {
+  margin-left: 3rem;
+  text-decoration: none;
+  color: var(--DesaturatedBlue);
+  font-family: "Open Sans", sans-serif;
+  font-size: 15px;
+}
+
+.landing {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 4rem 0;
+}
+
+.landing-left {
+  flex-basis: 45%;
+  font-family: "Raleway", sans-serif;
+}
+
+.landing-left h1 {
+  font-size: 2.3rem;
+  font-weight: 700;
+  color: var(--VeryDarkBlue);
+  margin-bottom: 1.4rem;
+  line-height: 3.5rem;
+}
+
+.landing-left p {
+  font-weight: 400;
+  font-size: 1.1rem;
+  color: var(--VeryDarkBlue);
+  margin-bottom: 1.4rem;
+}
+
+.landing-right {
+  flex-basis: 50%;
+}
+
+.landing-right img {
+  width: 35rem;
+}
