--- a/junior/fylo_landing_page/styles.css
+++ b/junior/fylo_landing_page/styles.css
@@ -62,6 +62,7 @@ img {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
   margin: 4rem 0;
 }
 
@@ -78,17 +79,97 @@ img {
   line-height: 3.5rem;
 }
 
-.landing-left p {
-  font-weight: 400;
-  font-size: 1.1rem;
+.landing-left-p {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 700;
+  font-size: 1rem;
   color: var(--VeryDarkBlue);
   margin-bottom: 1.4rem;
 }
 
 .landing-right {
-  flex-basis: 50%;
+  flex-basis: 55%;
+  width: 100%;
 }
 
 .landing-right img {
   width: 35rem;
+  margin-left: 15%;
+}
+
+#landing-email {
+  border: 1px solid #000;
+  border-radius: 3px;
+  padding: 10px 15px;
+  width: 15rem;
+  height: 1rem;
+  margin-right: 1rem;
+  outline: none;
+}
+
+.landing-email::placeholder {
+  color: var(--LightGray);
+}
+
+#landing-form-msg {
+  color: red;
+  font-size: 13px;
+  margin-top: 5px;
+  display: none;
+}
+
+.btn {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 0.75rem;
+  border: none;
+  border-radius: 3px;
+  width: 11rem;
+  height: 2.35rem;
+  background-color: var(--BrightBlue);
+  padding: 5px 13px;
+  text-align: center;
+  color: #fff;
+  margin-top: 1rem;
+}
+
+@media (max-width: 1175px) {
+  body {
+    width: 90%;
+  }
+
+  .head {
+    margin-bottom: 5rem;
+  }
+
+  .head a {
+    margin-left: 2rem;
+  }
+
+  .landing {
+    flex-direction: column-reverse;
+    text-align: center;
+    margin: 0 auto;
+  }
+
+  .landing-left p {
+    margin-bottom: 2.5rem;
+  }
+
+  .landing-right {
+    margin-bottom: 3rem;
+  }
+
+  .landing-right img {
+    width: 100%;
+    margin: 0;
+  }
+
+  .btn {
+    width: 17.3rem;
+    height: 2.5rem;
+    margin: 0 atuo;
+    margin-top: 1.5rem;
+    margin-right: 0.68rem;
+  }
 }
